--- a/Makefile.global
+++ b/Makefile.global
@@ -1,5 +1,5 @@
 #generated on nie maj 14 12:52:14 CEST 2006
-CC=gcc
+CC=gcc-4.2
 prefix=/root/usr
 DESTDIR=
 PREFIX=$(DESTDIR)$(prefix)
@@ -7,7 +7,7 @@ OS=-DUNIX
 #DEVEL=-DDEVEL
 SDLFLAGS=-I/usr/include/SDL -D_REENTRANT
 SOUND=-DSOUND
-OPENGL=-DOPENGL
-CFLAGS=-O2 $(SDLFLAGS) $(OS) $(DEVEL) $(SOUND) $(OPENGL)
+#OPENGL=-DOPENGL
+CFLAGS= -g $(SDLFLAGS) $(OS) $(DEVEL) $(SOUND) $(OPENGL)
 WORKDIR=$(PREFIX)/games/oki
 CLIBS=-lSDL -lpthread -lSDL_image -lSDL_mixer -lGL
