Collision and ghost fixes

--- a/Makefile.global
+++ b/Makefile.global
@@ -4,7 +4,7 @@ prefix=/root/usr
 DESTDIR=
 PREFIX=$(DESTDIR)$(prefix)
 OS=-DUNIX
-#DEVEL=-DDEVEL
+DEVEL=-DDEVEL
 SDLFLAGS=-I/usr/include/SDL -D_REENTRANT
 SOUND=-DSOUND
 #OPENGL=-DOPENGL
